  * debian/control: Add lsb-release dependency to -server-dev-all, as the
    pg_buildext tool needs it.
  * pg_wrapper: Find libreadline in multiarch directory, too.
    (Closes: #640520)
  * debian/rules: logrotate 3.8.0 requires specifying the "su" option, which
    is not backportable. Dynamically check the available logrotate version,
    and add it if it is >= 3.8. (Closes: #640493)
  * PgCommon.pm: Allow '@' characters in LC_CTYPE/LC_COLLATE values. Thanks to
    Willi Mann for the patch. (Closes: #640031)

 -- Martin Pitt <mpitt@debian.org>  Sun, 28 Aug 2011 17:19:28 +0200

postgresql-common (121) unstable; urgency=low

  [ Martin Pitt ]
  * debian/supported-versions: Switch Ubuntu 11.10 to 9.1 (LP: #833684) and
    also preemtively add Ubuntu 12.04 (which will ship with 9.1, too).
  * debian/control: Bump Standards-Version to 3.9.2, no changes necessary.
  * debian/rules: Call dh_installinit with -r to avoid restarting on upgrade.
    (Closes: #639140)
  * debian/control: Wrap dependencies.
  * debian/control, debian/rules: Convert from cdbs to dh, and bump
    Standards-Version to 7.
  * debian/control, debian/rules: Build the versionless metapackages from this
    source instead of the current postgresql-X.Y source. This behaves better
    with backports. Thanks to Christoph Berg for the suggestion.
  * debian/postgresql-common.lintian-overrides: Don't complain about missing
    manpage for pg_config, it's shipped by libpq-dev.
  * debian/control: Update description of the metapackages to actually say
    "metapackage" to quiesce lintian.
  * Split POD of pg_buildext into pg_buildext.pod, and update debian/rules to
    build the manpage from there. Fixes lintian "shell syntax failure"
    error.

  [ Peter Eisentraut ] 
  * pg_createcluster:
    - Use "peer" instead of "ident" on local socket connections from 9.1 on.
    - Apply pg_hba.conf adjustments to replication connections as well.
    - (Closes: #632702)
